# damnbot

./: .env.example  README.md  getenv.py  main.py  pyproject.toml
core/: bridge.py
goland/: go.mod  go.sum  main.go
goland/types/general/: chat.go  chatmember.go  message.go  update.go  user.go
