[project]
name = "damnbot"
version = "0.1.0"
description = "the most brainfucked telegram moderation bot ever created"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.21.0",
    "dotenv>=0.9.9",
    "pygoridge>=0.1.0",
    "redis>=6.2.0",
    "sqlalchemy>=2.0.41",
]
